# batcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  _prof.py  _rb.py  architecture.txt  justfile  pyproject.toml
.claude/rules/: architecture.md  maintainability.md  performance.md  python-control-plane.md  python-quality.md  rust-engine.md  testing.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: BENCHMARK_RESULTS.md  README.md  context.py  contexts.py  daft_compare.py  discover.py  distributed.py  harness.py  optimizer_bench.py  registry.py  run.py  shuffle_vs_object_store.py  sources.py
benchmarks/cluster/: cluster_util.py  vs_ray_daft.py
benchmarks/engines/: __init__.py  base.py  batcher.py  daft.py  duckdb.py  lineup.py  polars.py  pyarrow.py  ray.py  spark.py
benchmarks/scenarios/: dist_bench.py  scale_bench.py  strength_bench.py
benchmarks/suites/: __init__.py  aggregation.py  conditional.py  dates.py  filtering.py  joins.py  mathfns.py  ordering.py  projection.py  ray_data.py  setops.py  strings.py  tpch.py  window.py
crates/: CLAUDE.md
crates/bc-arrow/: Cargo.toml
crates/bc-codegen/: Cargo.toml
crates/bc-codegen/src/: analyze.rs  compile.rs  emit.rs  lib.rs  simd.rs
crates/bc-expr/: Cargo.toml
crates/bc-expr/src/: error.rs  lib.rs
crates/bc-expr/src/eval/: binary.rs  cast.rs  date.rs  dispatch.rs  generate.rs  in_list.rs  list.rs  map.rs  math.rs  mod.rs  str.rs  timezone.rs
crates/bc-expr/src/eval/list_ops/: list_hof.rs  list_set.rs  mod.rs
crates/bc-expr/src/eval/media/: audio.rs  image.rs  mod.rs  video.rs
crates/bc-interp/: Cargo.toml
crates/bc-interp/src/: dist.rs  error.rs  join_par.rs  lib.rs  metrics.rs  par.rs  window_spill.rs
crates/bc-interp/src/ops/: external_sort.rs  joins.rs  mixed_spill.rs  mod.rs  morsel.rs  radix_sort.rs  reshape.rs
crates/bc-interp/src/ops/quantile_spill/: histogram.rs  mod.rs
crates/bc-io/: Cargo.toml
crates/bc-io/src/: lib.rs  store.rs
crates/bc-ir/: Cargo.toml
crates/bc-ir/src/: engine_config.rs  error.rs  lib.rs
crates/bc-py/: Cargo.toml
crates/bc-py/src/: bloom.rs  errors.rs  lib.rs  normalize.rs  process.rs  shuffle.rs  sketches.rs  tracing_init.rs
crates/bc-resource/: Cargo.toml
crates/bc-resource/src/: lib.rs
crates/bc-runtime/: Cargo.toml
crates/bc-runtime/src/: error.rs  join.rs  lib.rs  shuffle.rs  window.rs  window_frame.rs  window_partition_agg.rs
crates/bc-runtime/src/agg/: accum.rs  argextreme.rs  distinct.rs  fused.rs  hll.rs  median.rs  mod.rs  qsketch.rs  radix.rs  spill.rs  stats.rs  var.rs
crates/bc-sketches/: Cargo.toml
crates/bc-transport/: Cargo.toml
crates/bc-transport/src/: exchange.rs  handler.rs  lib.rs  shared.rs  store.rs  ticket.rs
crates/bc-udf/: Cargo.toml
docs/: Makefile  conf.py  index.md  requirements.txt
docs/_static/: custom.css
docs/api/: complete.md  configuration.md  dataset.md  exceptions.md  expressions.md  index.md  io.md  ml.md  reference.md  sql.md
docs/architecture/: execution.md  fault-tolerance.md  index.md  optimization.md  overview.md
docs/configuration/: environment.md  index.md  options.md  profiles.md
docs/examples/: analytics.md  etl.md  index.md
docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
docs/internals/: README_PDF_GENERATION.md  carbonite.md  execution.md  extending.md  generate_pdf.py  index.md  kyber.md  mathematical_foundations.md  rfc-gpu-transport.md  testing-strategy.md
docs/learning-paths/: data-engineer.md  data-scientist.md  index.md  ml-engineer.md  platform-engineer.md
docs/migration/: index.md
docs/ml/: gpu.md  index.md  inference.md  llm.md  multimodal.md  preprocessors.md  pytorch.md  serving.md  streaming.md
docs/tutorials/: batch-inference.md  first-pipeline.md  index.md  synthetic-data-generation.md
docs/user-guide/: aggregations.md  best-practices.md  cloud-storage.md  data-quality.md  expressions.md  filtering.md  index.md  joins.md  lakehouse.md  performance.md  reading-data.md  sql.md  streaming.md  transformations.md  troubleshooting.md  window-functions.md  writing-data.md
examples/: README.md  adaptive_optimization.py  data_quality.py  distributed.py  feature_engineering.py  lakehouse_scd.py  ml_inference.py  performance_caching.py  quickstart.py  spill.py  sql.py  streaming_pipeline.py  timeseries.py  transformations_aggregations_joins.py  window_functions.py
python/batcher/: CLAUDE.md  __init__.py
tests/: conftest.py
tests/differential/: conftest.py  test_diff_adaptive.py  test_diff_agg_product_bitwise.py  test_diff_algebraic_rules.py  test_diff_approx_distinct.py  test_diff_array_agg.py  test_diff_array_listjoin.py  test_diff_asof.py  test_diff_basic.py  test_diff_batch_a.py  test_diff_bloom_index.py  test_diff_bool_agg.py  test_diff_coercion_groupby_expr.py  test_diff_conditional_fns.py  test_diff_constant_propagation.py  test_diff_count_distinct.py  test_diff_count_if.py  test_diff_dataset_sugar.py  test_diff_date_trunc.py  test_diff_decimal.py  test_diff_describe.py  test_diff_dictionary.py  test_diff_distinct_subset.py  test_diff_distinct_union.py  test_diff_distributed_join.py  test_diff_distributed_sort.py  test_diff_dq.py  test_diff_dt_extra.py  test_diff_dt_fields.py  test_diff_dt_list_more.py  test_diff_eager_aggregation.py  test_diff_eliminate_left_join.py  test_diff_empty.py  test_diff_empty_propagation.py  test_diff_encoding.py  test_diff_event_time_window.py  test_diff_explode.py  test_diff_expr_more.py  test_diff_expr_sugar.py  test_diff_first_last.py  (+93 more)
tests/docs/: test_api_coverage.py  test_doc_examples.py  test_examples.py
tests/integration/: test_adaptive_optimizer.py  test_adaptive_stress.py  test_audio_decode.py  test_blob_auto_offload.py  test_blob_offload.py  test_callbacks.py  test_carbonite_cluster_transport.py  test_carbonite_recovery_e2e.py  test_carbonite_spill.py  test_carbonite_transfer.py  test_catalog_profile.py  test_challenging_scenarios.py  test_cluster_topology.py  test_dataset_indexing.py  test_delta_streaming.py  test_edge_cases.py  (+70 more)
tools/: lint_structure.py
(+461 files in other folders)
