[package]
name = "bc-expr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bc-arrow.workspace = true
arrow.workspace = true
serde.workspace = true
thiserror.workspace = true
regex = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
# Image decode for the `.image` expression namespace (interpreter oracle path);
# limited to common codecs to keep the dependency footprint small.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "webp",
] }

[lints]
workspace = true
