[package]
name = "bc-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bc-arrow.workspace = true
bc-expr.workspace = true
serde.workspace = true
serde_json = { workspace = true }
thiserror.workspace = true

[features]
video = ["bc-expr/video"]

[lints]
workspace = true
